--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "raw-loader": "0.5.1",
     "remap-istanbul": "^0.5.1",
     "rimraf": "^2.5.2",
+    "rucksack-css": "^0.8.6",
     "sass-loader": "^3.2.0",
     "sinon": "^1.17.3",
     "source-map-loader": "^0.1.5",
