fix(typings): Add custom typings definition file / fix erratic .directive() definition

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "declaration": true
   },
   "files": [
-    "typings/main.d.ts"
+    "typings/main.d.ts",
+    "src/custom-typings.d.ts"
   ],
   "exclude": [
     "typings/browser.d.ts",
