--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "oclazyload": "^1.0.9"
   },
   "devDependencies": {
-    "@scarlz/cpp": "^0.1.4",
+    "@govuk/angularjs-framework": "^0.1.1",
     "angular-mocks": "^1.5.5",
     "assets-webpack-plugin": "^3.4.0",
     "awesome-typescript-loader": "^0.16.2",
